loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: not found: value notisFacingWall
while (notisFacingWall()) {
       ^